# WebMining

./: EXPERIMENT_REPORT.md  pyproject.toml  temp.drawio  temp.sql
app/backend/: check_stats.py  database.py  db_creation.ipynb  main.py
app/backend/api/: coldstart_comparison_full.csv  coldstart_precision_pivot.csv  coldstart_recall_pivot.csv  train_all.py  train_improved.py
app/backend/api/checkpoints/: model_comparison.csv
app/backend/api/checkpoints/bivae/: config.pkl  metrics.json
app/backend/api/checkpoints/bpr/: config.pkl  metrics.json
app/backend/api/checkpoints/lightgcn/: config.pkl  item_emb.pt  metrics.json  user_emb.pt
app/backend/api/checkpoints/mf/: metrics.json
app/backend/api/cold_start/: dataset.py  infer.py  model.py  plot_loss.py  train.py
app/backend/api/cold_start/EmerG/: books_coldstart.pkl
app/backend/api/cold_start/checkpoints/: loss_history.json
app/backend/api/cold_start/tests/: results.json  test_dataset.py  test_infer.py  test_model.py
app/backend/api/data/: books.py
app/backend/api/metrics/: eval.py
app/backend/api/models/: model.py
app/backend/api/plots/: 01_imports_setup.py  02_load_metrics.py  03_plot_loss_curves.py  04_model_comparison.py  05_training_time.py  06_summary_table.py  plot.ipynb
app/backend/api/schemas/: book.py  rating.py  user.py
app/backend/api/v1/: router.py
app/frontend/: package-lock.json  package.json
app/frontend/src/: App.tsx
app/frontend/src/components/: BookCard.tsx  Navbar.tsx
app/frontend/src/pages/: Home.tsx  Login.tsx  Register.tsx
app/frontend/src/services/: api.ts
(+24 files in other folders)
