[project]
name = "webmining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "cornac>=2.3.0",
    "fastapi>=0.127.0",
    "ipython>=9.8.0",
    "jupyter>=1.1.1",
    "lightfm",
    "matplotlib>=3.10.8",
    "memory-profiler>=0.61.0",
    "nbconvert>=7.16.6",
    "numba>=0.63.1",
    "numpy<2",
    "pandas>=2.3.3",
    "pandera>=0.27.1",
    "psycopg2>=2.9.11",
    "pyspark",
    "retrying>=1.4.2",
    "scikit-learn>=1.8.0",
    "scikit-surprise>=1.1.4",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.40.0",
]

[tool.uv.sources]
lightfm = { git = "https://github.com/daviddavo/lightfm" }
